# taocp

./: .gitignore  default.nix  taocp.cabal
haskell/: CHANGELOG.md  taocp.cabal
haskell/src/TAOCP_1A/: Log.hs
